# llm-topology

./: README.md  llm_topology.py  pyproject.toml
tests/: test_topology.py
tests/cassettes/test_topology/: test_prompt.yaml
