[project]
name = "llm-topology"
version = "0.1"
description = "LLM access to Topology"
readme = "README.md"
authors = [{ name = "Nick Mystic" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["llm"]

[project.urls]
Homepage = "https://github.com/ghostofpokemon/llm-topology"
Changelog = "https://github.com/ghostofpokemon/llm-topology/releases"
Issues = "https://github.com/ghostofpokemon/llm-topology/issues"
CI = "https://github.com/ghostofpokemon/llm-topology/actions"

[project.entry-points.llm]
topology = "llm_topology"

[project.optional-dependencies]
test = ["pytest", "pytest-recording"]
